--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,7 +44,7 @@ dev_dependencies:
 
 # Splash screen configuration
 flutter_native_splash:
-  color: "#FFFFFF"
+  color: '#FFFFFF'
   image: assets/logo.png
   android_gravity: center
   ios_content_mode: center
